--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>app</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assets/login.svg"
+      type="image/x-icon"
+    />
+    <title>Blogy</title>
+    <style>
+      ::-webkit-scrollbar {
+        display: none;
+      }
+
+      html {
+        scrollbar-width: none;
+      }
+
+      body {
+        -ms-overflow-style: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
